welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:12: error: value Yellow is not a member of object java.awt.Color
	setCouleurBrosse(Color.Yellow)
                               ^FlowerPot:42: error: not found: value gogogo3
	gogogo3
        ^FlowerPot:44: error: not found: value gogogo5
	gogogo5
        ^